--- a/angualr/dashboard/src/dashboard/dashboard.component.html
+++ b/angualr/dashboard/src/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
 <p>dashboard works!</p>
+
+<a routerLink="profiles">profiles</a>
+<a routerLink="settings"> settings</a>
+<router-outlet></router-outlet>
