--- a/angualr/dashboard/src/menu/menu.component.html
+++ b/angualr/dashboard/src/menu/menu.component.html
@@ -2,9 +2,9 @@
     <h1>Angular Dashboard</h1>
     <nav>
       <ul>
-        <li><a routerLink="/home">Home</a></li>
-        <li><a routerLink="/about">About</a></li>
-        <li><a routerLink="/contact">Contact</a></li>
+        <li><a routerLink="/home" routerLinkActive>Home</a></li>
+        <li><a routerLink="/aboutus">About</a></li>
+        <li><a routerLink="/contact:1">Contact</a></li>
         <li><a routerLink="/dashboard">Dashboard</a></li>
       </ul>
     </nav>
