communication with id

--- a/angualr/dashboard/src/menu/menu.component.html
+++ b/angualr/dashboard/src/menu/menu.component.html
@@ -4,7 +4,7 @@
       <ul>
         <li><a routerLink="/home" routerLinkActive>Home</a></li>
         <li><a routerLink="/aboutus">About</a></li>
-        <li><a routerLink="/contact:1">Contact</a></li>
+        <!-- <li><a routerLink="contact">Contact</a></li> -->
         <li><a routerLink="/dashboard">Dashboard</a></li>
       </ul>
     </nav>
