--- a/angualr/dashboard/src/home/home.component.html
+++ b/angualr/dashboard/src/home/home.component.html
@@ -1,4 +1,11 @@
 <p>home works!</p>
 
-<a routerLink="homechild">homechild</a>
+
+<div *ngFor="let product of products" class="product">
+  <p>{{ product.name }}</p>
+  <p>{{ product.id }}</p>
+  <p>{{ product.price }}</p>
+  <a [routerLink]="['/contact', product.id]">productdetails</a>
+</div>
+
 <router-outlet></router-outlet>
