--- a/angualr/dashboard/src/contact/contact.component.html
+++ b/angualr/dashboard/src/contact/contact.component.html
@@ -1,3 +1,13 @@
-<p>contact works!</p>
+<!-- <p>contact works!</p>
 
-{{id}}
+{{id}}<br>
+ <a [routerLink]="['/contact', 1]">productdetails</a><br>
+ <a [routerLink]="['/contact', 2]">productdetails</a><br>
+  <a [routerLink]="['/contact', 3]">productdetails</a>
+
+<router-outlet></router-outlet> -->
+<div>swetha</div>
+
+<div *ngIf="idn != null && idn > 0">
+{{idn}}
+</div>
