--- a/angualr/dashboard/src/home/home.component.html
+++ b/angualr/dashboard/src/home/home.component.html
@@ -7,5 +7,5 @@
   <p>{{ product.price }}</p>
   <a [routerLink]="['/contact', product.id]">productdetails</a>
 </div>
-
+<app-contact [idn]='id'></app-contact>
 <router-outlet></router-outlet>
