--- a/angualr/dashboard/src/home/home.component.html
+++ b/angualr/dashboard/src/home/home.component.html
@@ -10,4 +10,7 @@
 <app-contact [idn]="'someone'" (childvalue)="fromchild($event)"></app-contact>
 <app-aboutus [idn]="'i am from parent value recieved by my child'"></app-aboutus>
 {{parentvalue}}
+
+<!-- <app-signals></app-signals> -->
+ <app-users></app-users>
 <router-outlet></router-outlet>
