--- a/angualr/dashboard/src/app/projection/projection.component.html
+++ b/angualr/dashboard/src/app/projection/projection.component.html
@@ -1,3 +1,5 @@
 <p>projection works!</p>
-
+<div #varview>hellow view</div>
+<div #viwchild>childone</div>
+<div #viwchild>childtwo</div>
 <ng-content></ng-content>
