--- a/angualr/angulardashboard/src/app/login/login.component.html
+++ b/angualr/angulardashboard/src/app/login/login.component.html
@@ -23,3 +23,5 @@
         <button type="submit" [disabled]="userForm.invalid">Submit</button>
     </form>
 </div>
+
+<a [routerLink]="'/signup'">signup</a>
